# synology-thumbgen

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  setup.py
synology_thumbgen/: dsthumbgen.py
