[metadata]
name = synology-thumbgen
summary = Add a short description here!
license = gpl
author = mbrrg
author_email = martin.berg@lundalogik.se
home-page = https://github.com/Stibbons/synology-thumbgen
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python 3

[entry_points]
# Add here console scripts like:
console_scripts =
    synology_thumbgen = synology_thumbgen.dsthumbgen:main

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build
